# Gaze_tracking

./: README.md
Gaze_tracking_pc/: CMakeLists.txt
Gaze_tracking_pc/src/: CMakeLists.txt  FaceLandmark.hpp  demo.cpp  gaze_direction_estimator.cpp  gaze_direction_estimator.h
Gaze_tracking_rpi/: .gitignore  CMakeLists.txt
Gaze_tracking_rpi/src/: CMakeLists.txt  LibCamera.cpp  LibCamera.h  demo.cpp  demo.cpp.bak
